static/css/components/searchbox.css
.searchbox {
  background-color: var(--white);
  border: 1px solid var(--dark-beige);
  border-radius: 5px;
  position: relative;
  display: inline-flex;
  align-items: center;
  padding: 2px;
  padding-left: 5px;
  width: 50%;
  height: 30px;
}

.searchbox__btn-icon {
  background: url(/static/images/search-icon.svg) center no-repeat;
  width: 35px;
  cursor: pointer;
  border: 0;
}

.searchbox__input {
  margin: 0 !important;
  border: 0;
  background: transparent;
  color: var(--grey) !important;
  flex-grow: 1;
  font-size: 1em !important;
  min-width: 0;
}

/* --width-breakpoint-tablet */
@media (max-width: 768px) {
  .searchbox {
    width: 100%;
  }
}

